<resources>
    <string name="app_name">QuanLyKhoHang</string>
    <string name="register">ĐĂNG KÝ</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_confirm_password_hint">Xác nhận mật khẩu</string>
    <string name="login_action">SIGN IN</string>
    <string name="signup_login_hint">Đã có tài khoản? Đăng nhập</string>
    <string name="login_signup_hint">Chưa có tài khoản? Đăng ký</string>
    <string name="forget_password_hint">Quên mật khẩu?</string>
    <string name="title_activity_login">ĐĂNG NHẬP</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="home_action">Home</string>
    <string name="product_action">Products</string>
    <string name="statistical_action">Statistical</string>
    
    
    
    <string name="van">
        "Có lẽ phụ huynh nào cũng từng xuất hiện trong bài văn của con mình với vẻ ngoài và tính tình hoàn toàn không giống mình nhưng lại rất giống nhau.

Ngày mới ra trường, khi chấm bài kiểm tra tập làm văn lớp sáu với đề bài "kể lại một việc tốt em đã làm", tôi đã ngạc nhiên khi hầu như cả lớp chỉ làm có hai việc tốt, một là dẫn bà cụ qua đường, hai là nhặt được chiếc ví và trả lại người mất.

Điều khiến tôi không biết nên cười hay nên khóc là bà cụ trong bài nào cũng đứng ở ngã tư, cũng "tóc bạc phơ, dáng người gầy gầy, lưng cong cong, đôi mắt hiền từ". Chiếc ví nào cũng nhặt được trên đường đi học về, cũng "màu nâu đậm, hình vuông, bên trong có chứa nhiều giấy tờ quan trọng và một số tiền lớn".

Chẳng lẽ cả lớp 40 em lại gặp đúng một bà cụ, nhặt được cùng một chiếc ví? Tất nhiên ai cũng biết là không thể. Đó là một minh chứng cho việc học sinh bị lệ thuộc vào văn mẫu.

Thực trạng trên ở các lớp nhỏ, lên đến các lớp lớn hơn, khi chuyển sang các dạng văn khó hơn như nghị luận xã hội, nghị luận văn học, đề bài cũng phong phú hơn. Các em không thể chỉ học thuộc một vài bài văn mẫu tả cha mẹ, thầy cô, việc tốt, kỷ niệm vui buồn nữa mà phải phân tích, trình bày quan điểm của mình về các sự việc, hiện tượng trong xã hội hoặc các tư tưởng, đạo lý, tác phẩm văn học.

Tưởng chừng văn mẫu sẽ không còn đất dụng võ ở các khối lớp lớn cấp hai, cấp ba, nhưng chúng vẫn chi phối rất nhiều khi học sinh học thuộc những mở bài với cấu trúc giới thiệu tác giả, tác phẩm, vấn đề nghị luận... Đối với đoạn thơ đó, câu chuyện đó, nhiều em biết cần phải thuộc được những câu văn phân tích có sẵn để dễ lấy điểm hơn.

Tôi từng đọc được bình luận của học trò: "Đề thi thì ghi nêu cảm nhận của em, nhưng đáp án lại chấm theo ý của thầy cô". Thực ra, không phải chúng tôi chấm theo ý của thầy cô mà là chấm theo khung đáp án của Bộ, và để có điểm, ý tứ trong bài văn của các em phải phù hợp với đáp án. Đa số học sinh đều lựa chọn cách nhanh nhất để làm được điều đó, đó là học từ văn mẫu.

Không phải đến thế hệ giáo viên chúng tôi, văn mẫu mới trở thành đề tài gây nhiều tranh cãi trong việc dạy và học. Văn mẫu có cả "công" và "tội".

Văn mẫu trước hết là những bài văn hay. Đọc một bài văn hay, con người có thể nâng tầm nhận thức và thẩm mĩ, có thể nảy sinh những cảm xúc bồi đắp tâm hồn, được gợi cảm hứng để làm điều tốt đẹp. Học sinh có thể nhìn vào đó học hỏi được cách triển khai bài của mình, cách dẫn dắt ý, dùng từ ngữ, gạn lọc ý tâm đắc hoặc diễn đạt sáng tạo. Nó giúp ích rất nhiều cho khả năng viết của các em.

Tuy nhiên, thực trạng đáng buồn là văn mẫu đã không dừng lại ở việc dùng để tham khảo mà bị lạm dụng quá đà. Ai cũng biết, khi học sinh học thuộc văn mẫu, sự sáng tạo sẽ bị triệt tiêu, cảm xúc chân thật cũng không còn. Vậy thì môn văn đâu còn có thể nuôi dưỡng tâm hồn như sứ mệnh ban đầu của nó? Hơn nữa, nếu việc dạy học văn còn phụ thuộc vào văn mẫu sẽ dẫn đến tình trạng em nào thuộc bài tốt hơn sẽ được điểm cao hơn. Điều này rất nguy hiểm vì người dạy khó đánh giá được năng lực thực chất của người học.

Trả lời chất vấn trước Quốc hội sáng hôm qua, 11/11, Bộ trưởng Giáo dục Nguyễn Kim Sơn khẳng định sẽ "ngăn chặn, chấm dứt dạy theo văn mẫu", rằng ngành sẽ có hàng loạt biện pháp để điều chỉnh, chấm dứt văn mẫu - cũng là yếu tố chuyên môn để chấm dứt dạy thêm, học thêm.

Quan điểm này đã thể hiện quyết tâm muốn khắc phục hạn chế trong giáo dục, xây dựng nền giáo dục tiến bộ. Là giáo viên dạy văn, tôi cho rằng chấm dứt tình trạng học theo văn mẫu, bài mẫu cần cả quá trình chứ không phải một sớm một chiều. Và chấm dứt không có nghĩa là hoàn toàn triệt tiêu văn mẫu.

Chúng ta khó mà xóa hoàn toàn văn mẫu, bởi nhu cầu thưởng thức cái hay, cái đẹp của con người rất chính đáng. Cũng như việc ngắm bức tranh đẹp, nghe bản nhạc hay, việc đọc một bài văn đầy rung cảm và sâu sắc chắc chắn sẽ mang lại nhiều ích lợi cho tâm hồn. Văn mẫu vẫn sẽ tồn tại như đã từng, nhưng cách sử dụng trong nhà trường cần thay đổi. Lợi hay hại còn do mục đích và cách áp dụng, và ai là người làm được điều đó?

Trước hết là giáo viên dạy văn, người trực tiếp giảng dạy và đánh giá năng lực học tập của học sinh. Người thầy dạy như thế nào để học sinh hiểu được văn mẫu chỉ là phương tiện tham khảo, không phải là mục đích. Nếu giáo viên nào cũng hiểu sâu sắc rằng, việc lệ thuộc vào văn mẫu sẽ làm giảm năng lực tư duy và diễn đạt bằng ngôn ngữ của học sinh, có thể các em sẽ đạt điểm cao trong các kỳ thi, nhưng sẽ làm giảm đi sự năng động và sáng tạo trong cuộc sống, họ sẽ biết điều chỉnh cách dạy.

Ngoài giáo viên, để thực sự đổi thay, ngành giáo dục cũng cần thay đổi cách kiểm tra, đánh giá, ra đề, chấm điểm môn ngữ văn. Thực tế, đề thi môn văn dành cho các cấp học vẫn chưa có sự đột phá lớn, đa số vẫn xoay quanh các đề tài quen thuộc. Và cũng luôn sẵn có một kho văn mẫu phong phú trên Internet, học sinh chỉ cần gõ là ra.

Những năm gần đây, đề thi môn văn đã theo hướng gợi mở nhiều hơn, đã tạo không gian lớn hơn cho học sinh bày tỏ quan điểm của mình. Đáp án đưa ra cũng ghi rõ rằng, giám khảo cần tôn trọng quan điểm của học sinh và khuyến khích sự sáng tạo. Tuy nhiên, có lẽ người học trông chờ nhiều hơn thế, đó có thể là những đề văn hay, lạ, thậm chí là ngoài sách giáo khoa để phát huy vai trò tự học, tự nghiên cứu, mạnh dạn trình bày quan điểm và sự sáng tạo của các em.

Đâu phải riêng Việt Nam có văn mẫu. Tôi đã đọc các đề thi văn và bài làm đạt điểm cao trong các kỳ thi của nước khác, được công khai để tham khảo như văn mẫu. Chúng hầu hết là những đề thi không có trong sách giáo khoa, yêu cầu tư duy khác biệt của mỗi thí sinh, và vì thế bài làm không ai giống ai. Rất nhiều học sinh đã thích thú, có em còn thử giải đề văn của nước ngoài hoặc tranh luận rất hăng say. Điều đó chứng tỏ rằng học sinh của chúng ta vẫn rất thích học văn, vẫn rất hứng thú khi được trình bày quan điểm và lập luận của bản thân.

Và việc ngưỡng mộ những bài văn đó cũng chứng tỏ rằng, nhu cầu thưởng thức cái hay từ văn mẫu sẽ còn tồn tại mãi. Điều ta cần thay đổi chính là quy cách sử dụng văn mẫu trong giáo dục để chúng sẽ chỉ góp công chứ không còn là tội đồ."
    </string>
</resources>