<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/brownish_orange"
    tools:context=".activities.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_panel"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_gravity="center">
        <ImageView
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/gamelogo"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textSize="@dimen/headerTextSize"
            android:textStyle="bold"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:textColor="@color/textOrange"
            />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_email_hint"
            android:textColor="@color/textColorPrimary"
            android:padding="15dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:elevation="5dp"
            android:drawableStart="@drawable/ic_mail"
            android:drawablePadding="15dp"
            android:inputType="textEmailAddress" />
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_password_hint"
            android:textColor="@color/textColorPrimary"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_lock"
            android:elevation="5dp"
            android:drawablePadding="15dp"
            android:inputType="textPassword"/>
        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/edit_text_background"
            android:hint="@string/login_confirm_password_hint"
            android:textColor="@color/textColorPrimary"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:padding="15dp"
            android:drawableStart="@drawable/ic_lock"
            android:elevation="5dp"
            android:drawablePadding="15dp"
            android:inputType="textPassword"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brownish_orange"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:padding="15dp"
            android:text="@string/register"
            android:elevation="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_hint"/>
            <TextView
                android:id="@+id/link_go_sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:textColor="@color/textColorPrimary"
                android:text="@string/signup_login_hint"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>